[project]
name = "mythm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    "rich>=14.2.0",
    "soundfile>=0.13.1",
    "typer>=0.20.0",
]

[project.scripts]
mythm = "mythm:cli.app"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"


[tool.uv]
link-mode = "copy"

[tool.uv.pip]
link-mode = "copy"
